actually this is enough to fix the issue on IE #34

--- a/assets/sass/molecules/_media-mondrian-items.scss
+++ b/assets/sass/molecules/_media-mondrian-items.scss
@@ -47,10 +47,10 @@
 }
 
 .media-mondrian-thumbnail {
-  min-height: 250px; // IE 11 FIX
+  min-height: 1px; // IE 11 FIX
 
   &:not(.no-trick) {
-    flex: 1;
+    flex: 1 1 auto;
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center center;
